--- a/popup.css
+++ b/popup.css
@@ -16,6 +16,33 @@ h1 {
   margin-top: 1px;
 }
 
+/* for taking owner username input and button */
+#owner-form {
+  display: flex;
+  justify-content: center;
+  margin-bottom: 20px;
+}
+
+#owner-input {
+  padding: 5px;
+  margin-right: 10px;
+  border: 1px solid #000;
+  border-radius: 5px;
+}
+
+button {
+  padding: 5px 10px;
+  background-color: #7c11ce;
+  color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+
+button:hover {
+  background-color: #57108f;
+}
+
 /* for profile photo and picture */
 #profile-info {
   display: flex;
@@ -51,7 +78,7 @@ h3 a:hover {
 /* for repository info and its stats */
 #repository-info {
   width: 668px;
-  height: 330px;
+  height: 285px;
   margin: 2px;
   padding: 10px;
   border: 5px solid #331c1c32;
@@ -63,7 +90,7 @@ h3 a:hover {
 
 .repo-stats {
   border: 5px solid #7c11ce; /* Add border to each repository block */
-  padding: 10px; /* Add padding to the repository block */
+  padding: 7px; /* Add padding to the repository block */
   margin-bottom: 10px;
   border-radius: 10px;
   background-color: #eba05e;
